--- a/BookMyShow/BookMyShow/src/main/resources/application.properties
+++ b/BookMyShow/BookMyShow/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/bms?createTableIfNotExists=True
+spring.datasource.username=root
+spring.datasource.password=Roshan@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=backenddummay@gmail.com
+spring.mail.password=asknkmhknncjjjih
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
