--- a/BookMyShow/BookMyShow/src/main/resources/application.properties
+++ b/BookMyShow/BookMyShow/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.username=root
 spring.datasource.password=Roshan@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+logging.level.root=info
+
+"spring.mvc.pathmatch.matching-strategy=ant-path-matcher"
 
 
 
